# teahouse

./: .dockerignore  README.md  compose.yml  dockerfile  init.sh  manage.py  pyproject.toml  setup.cfg
account/: admin.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_customer_birthday.py  0003_alter_customer_avatar.py
account/test/: test_forms.py  test_models.py  test_pages.py  test_views.py
articles/: admin.py  models.py  urls.py  views.py
articles/migrations/: 0001_initial.py
articles/templatetags/: markdown_html.py
articles/test/: init.csv  test_commands.py  test_models.py  test_pages.py  test_views.py
cart/: admin.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_initial.py
cart/templatetags/: amount_price.py
cart/test/: test_managers.py  test_models.py  test_pages.py  test_views.py
catalogue/: admin.py  models.py  urls.py  views.py
catalogue/migrations/: 0001_initial.py  0002_initial.py  0002_remove_product_tea_amount_and_more.py  0002_tea_utensil.py  0003_alter_product_tea_type.py  0003_product_users_wishlist.py
catalogue/templatetags/: integer_division.py
catalogue/test/: init.csv  test_commands.py  test_models.py  test_pages.py  test_views.py
comments/: admin.py  forms.py  models.py  urls.py  views.py
static/: style.css  wishlist.js
store/: models.py  views.py
teahouse/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  messages.html
test/: factories.py  selenium_setup.py
wishlist/: admin.py  models.py  urls.py  views.py  wishlist.py
(+59 files in other folders)
